# rvv-intrinsic-doc

./: CMakeLists.txt  PERFORMANCE.md  setup.sh
examples/: common.h  rvv_add.c  rvv_add_fp16.c  rvv_add_fp32.c  rvv_exp_fp16.c  rvv_exp_fp32.c  rvv_matmul.c  rvv_mul_fp16.c  rvv_mvn.c  rvv_mvn_fp16.c  rvv_mvn_fp32.c  rvv_rmean_fp16.c  rvv_sgemm.c  rvv_softmax_fp16.c  rvv_softmax_fp32.c
